wlrexamples: Finish porting simple.c to nicer wrapper API